--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </style>
     </head>
     <body>
+        <img src = "1.png"/>
         <article>
             <h1>Site is temporarily unavailable.</h1>
             <p>Scheduled maintenance is currently in progress. Please check back soon.</p>
